@@ -12,6 +12,7 @@ V4.2.0 (in progress)
 [REFACTOR] : Images and files inserted into polymod fields now use correct website domain instead of main website domain
 [REFACTOR] : Add civility and company to users details
 [REFACTOR] : Add log for user disconnection
+[REFACTOR] : Add previous login message on connection
 [FEATURE] : Add oembed object and oembed polymod field (external media field). Update Mediacenter to manage oembed medias
 [FEATURE] : Add parent page selection on new page creation
 [FEATURE] : Add variable type {page:father:XXX} to get infos from current parent page
